# rust-static-map

./: Cargo.toml
macro/: Cargo.toml
macro/src/: lib.rs  util.rs
src/: lib.rs
tests/: arg.rs  arg_bound.rs  no_arg.rs  usage.rs
